fixing stuff after jump to Java 17